# fstree

./: CMakeLists.txt  LICENSE  README.md  helper.txt
.claude/: settings.local.json
src/: encoding_fix.hpp  fstree.manifest  fstree.rc  main.cpp  scanner.cpp  scanner.hpp
